--- a/css/home.css
+++ b/css/home.css
@@ -220,8 +220,24 @@ footer {
 }
 
 @media screen and (max-width: 500px) {
+	nav {
+		width: 100%;
+	}
+	.container {
+		width: 100%;
+	}
 	.main-content {
 		display: block;
+		width: 100%;
+	}
+	.main-content img {
+		width: 100%;
+	}
+	.cycle-next {
+		left: 92%;
+	}
+	.slide{
+		width: 100%;
 	}
 	.main-for-real {
 		width: 100%;
