--- a/css/about-me.css
+++ b/css/about-me.css
@@ -220,14 +220,42 @@ footer {
 	padding-top: 20px;
 }
 @media screen and (max-width: 500px) {
+	nav ul{
+		width: 100%;
+	}
+	
+	nav {
+		width: 100%;
+	}
+	.container {
+		width: 100%;
+	}
 	.main-content {
 		display: block;
+		width: 100%;
+		height: 150%;
+	}
+	.main-content img {
+		
+		width: 100%;
+		height: 75%;
+		
+		
+	}
+	.cycle-next {
+		left: 92%;
+	}
+	.slide{
+		width: 100%;
 	}
 	.main-for-real {
 		width: 100%;
+		height: 150%;
+		
 	}
 	aside {
 		display: none;
 	}
+	
 	
 }
