--- a/css/menu.css
+++ b/css/menu.css
@@ -223,6 +223,34 @@ footer {
 }
 
 @media screen and (max-width: 500px) {
+	
+	nav ul{
+		width: 100%;
+	}
+	
+	nav {
+		width: 100%;
+	}
+	.thumbnails {
+		display: block;
+	}
+	
+	.thumbnails a {
+		
+		width: 50%;
+		box-sizing: border-box;
+		padding: 15px;
+		margin-bottom: 15px;
+		
+	}
+	.thumbnails img {
+		width: 90%;
+		height: 150px;
+		display: block;
+		transition: all .2s ease-in-out;
+		border: 1px solid black;
+	}
+	
 	.main-content {
 		display: block;
 	}
